syntax = "proto3";

package identity.identity;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "identity/identity/params.proto";
import "identity/identity/id.proto";

option go_package = "identity/x/identity/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/identity/identity/params";
  
  }
  
  // Queries a list of Id items.
  rpc Id    (QueryGetIdRequest) returns (QueryGetIdResponse) {
    option (google.api.http).get = "/identity/identity/id/{did}";
  
  }
  rpc IdAll (QueryAllIdRequest) returns (QueryAllIdResponse) {
    option (google.api.http).get = "/identity/identity/id";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetIdRequest {
  string did = 1;
}

message QueryGetIdResponse {
  Id id = 1 [(gogoproto.nullable) = false];
}

message QueryAllIdRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllIdResponse {
  repeated Id                                     id         = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

